--- a/sass/animation/_animation.scss
+++ b/sass/animation/_animation.scss
@@ -6,9 +6,20 @@
     animation: anim1 2s ease-in;
 }
 
+.classeAnim2{
+    animation: anim2 2s ease-out;
+}
+
 @keyframes anim1 {
     0%   {background-color: red;}
     25%  {background-color: yellow;}
     50%  {background-color: blue;}
     100% {background-color: green;}
+}
+
+@keyframes anim2 {
+    0%   {background-color: yellow;}
+    25%  {background-color: yellow;}
+    50%  {background-color: blue;}
+    100% {background-color: red;}
 }
