--- a/sass/animation/_animation.scss
+++ b/sass/animation/_animation.scss
@@ -11,10 +11,15 @@
 }
 
 @keyframes anim1 {
-    0%   {background-color: red;}
-    25%  {background-color: yellow;}
-    50%  {background-color: blue;}
-    100% {background-color: green;}
+    0% {
+            transform: scale(1) rotateZ(0);
+      }
+      50% {
+            transform: scale(2) rotateZ(180deg);
+      }
+      100% {
+            transform: scale(1) rotateZ(360deg);
+      }
 }
 
 @keyframes anim2 {
