--- a/style.css
+++ b/style.css
@@ -481,31 +481,31 @@ template {
 
 @-webkit-keyframes anim1 {
   0% {
-    background-color: red;
-  }
-  25% {
-    background-color: yellow;
+    -webkit-transform: scale(1) rotateZ(0);
+            transform: scale(1) rotateZ(0);
   }
   50% {
-    background-color: blue;
+    -webkit-transform: scale(2) rotateZ(180deg);
+            transform: scale(2) rotateZ(180deg);
   }
   100% {
-    background-color: green;
+    -webkit-transform: scale(1) rotateZ(360deg);
+            transform: scale(1) rotateZ(360deg);
   }
 }
 
 @keyframes anim1 {
   0% {
-    background-color: red;
-  }
-  25% {
-    background-color: yellow;
+    -webkit-transform: scale(1) rotateZ(0);
+            transform: scale(1) rotateZ(0);
   }
   50% {
-    background-color: blue;
+    -webkit-transform: scale(2) rotateZ(180deg);
+            transform: scale(2) rotateZ(180deg);
   }
   100% {
-    background-color: green;
+    -webkit-transform: scale(1) rotateZ(360deg);
+            transform: scale(1) rotateZ(360deg);
   }
 }
 
