--- a/style.css
+++ b/style.css
@@ -484,10 +484,6 @@ template {
     -webkit-transform: scale(1) rotateZ(0);
             transform: scale(1) rotateZ(0);
   }
-  50% {
-    -webkit-transform: scale(2) rotateZ(180deg);
-            transform: scale(2) rotateZ(180deg);
-  }
   100% {
     -webkit-transform: scale(1) rotateZ(360deg);
             transform: scale(1) rotateZ(360deg);
@@ -499,10 +495,6 @@ template {
     -webkit-transform: scale(1) rotateZ(0);
             transform: scale(1) rotateZ(0);
   }
-  50% {
-    -webkit-transform: scale(2) rotateZ(180deg);
-            transform: scale(2) rotateZ(180deg);
-  }
   100% {
     -webkit-transform: scale(1) rotateZ(360deg);
             transform: scale(1) rotateZ(360deg);
@@ -511,31 +503,23 @@ template {
 
 @-webkit-keyframes anim2 {
   0% {
-    background-color: yellow;
-  }
-  25% {
-    background-color: yellow;
-  }
-  50% {
-    background-color: blue;
+    -webkit-transform: rotate3d(1, 1, 0, 0deg);
+            transform: rotate3d(1, 1, 0, 0deg);
   }
   100% {
-    background-color: red;
+    -webkit-transform: rotate3d(1, 1, 0, 360deg);
+            transform: rotate3d(1, 1, 0, 360deg);
   }
 }
 
 @keyframes anim2 {
   0% {
-    background-color: yellow;
-  }
-  25% {
-    background-color: yellow;
-  }
-  50% {
-    background-color: blue;
+    -webkit-transform: rotate3d(1, 1, 0, 0deg);
+            transform: rotate3d(1, 1, 0, 0deg);
   }
   100% {
-    background-color: red;
+    -webkit-transform: rotate3d(1, 1, 0, 360deg);
+            transform: rotate3d(1, 1, 0, 360deg);
   }
 }
 /*# sourceMappingURL=style.css.map */
